--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -9,7 +9,19 @@ author_profile: true
   
   
   <tr><th>2018</th><td>
-<u>Coley, C. W.</u>, &ldquo;Leveraging historical reaction data to inform synthesis and synthesis design.&rdquo; <em>Invited Talk, 4th Annual Organic Chemistry Meeting of the Minds, Boston, MA. </em><strong>2018</strong>.  
+<u>Coley, C. W.</u> et al., &ldquo;Learning to design and validate small-molecule synthetic routes from historical reaction data.&rdquo; <em>AIChE Annual Meeting, Pittsburgh, PA. </em><strong>2018</strong>.  
+  </td></tr>
+  
+   <tr><th></th><td>
+     <u>Coley, C. W.</u> et al., &ldquo;Closed-loop reaction optimization in microscale oscillating droplets: an MINLP algorithm applied to Suzuki-Miyaura coupling catalyst selection.&rdquo; <em>AIChE Annual Meeting, Pittsburgh, PA. </em><strong>2018</strong>.  
+  </td></tr>
+  
+   <tr><th></th><td>
+     <u>Coley, C. W.</u> et al., &ldquo;Photoredox iridium-nickel dual catalyzed decarboxylative arylation cross-coupling: from batch to continuous flow via self-optimizing segmented flow reactor.&rdquo; <em>AIChE Annual Meeting, Pittsburgh, PA. </em><strong>2018</strong>.  
+  </td></tr>
+  
+  <tr><th></th><td>
+  <u>Coley, C. W.</u>, &ldquo;Leveraging historical reaction data to inform synthesis and synthesis design.&rdquo; <em>Invited Talk, 4th Annual Organic Chemistry Meeting of the Minds, Boston, MA. </em><strong>2018</strong>.  
   </td></tr>
   
    <tr><th></th><td>
